unpackaged/main/default/objects/conference360__Hotel_Room__c/conference360__Hotel_Room__c.object-meta.xml
<CustomObject>
    <label>Hotel Booking</label>
    <nameField>
        <displayFormat>HB-{000000}</displayFormat>
        <label>Hotel Booking Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Hotel Bookings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>