unpackaged/main/default/objects/conference360__Hotel_Room__c/fields/conference360__Event__c.field-meta.xml
<CustomField>
    <fullName>conference360__Event__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Event related to this Hotel Booking.</description>
    <inlineHelpText>The Event related to this Hotel Booking.</inlineHelpText>
    <label>Event</label>
    <referenceTo>conference360__Event__c</referenceTo>
    <relationshipLabel>Hotel Bookings</relationshipLabel>
    <relationshipName>Hotel_Bookings</relationshipName>
    <type>Lookup</type>
</CustomField>