unpackaged/main/default/objects/conference360__Hotel_Room__c/fields/conference360__Hotel_Room_Block__c.field-meta.xml
<CustomField>
    <fullName>conference360__Hotel_Room_Block__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Relate this Hotel Booking to a Hotel Room Block.</description>
    <inlineHelpText>Relate this Hotel Booking to a Hotel Room Block.</inlineHelpText>
    <label>Hotel Room Block</label>
    <referenceTo>conference360__Hotel_Room_Block__c</referenceTo>
    <relationshipLabel>Hotel Bookings</relationshipLabel>
    <relationshipName>Hotel_Bookings</relationshipName>
    <type>Lookup</type>
</CustomField>