unpackaged/main/default/objects/conference360__Hotel_Room__c/fields/conference360__Room_Type__c.field-meta.xml
<CustomField>
    <fullName>conference360__Room_Type__c</fullName>
    <description>The type of room. Single is either one bed or for 1-2 people, Double is either two beds or for 2-4 people, Triple is either three beds or for 3-6 people.</description>
    <inlineHelpText>The type of room. Single is either one bed or for 1-2 people, Double is either two beds or for 2-4 people, Triple is either three beds or for 3-6 people.</inlineHelpText>
    <label>Room Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Single</fullName>
            </value>
            <value>
                <fullName>Double</fullName>
            </value>
            <value>
                <fullName>Triple</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>