unpackaged/main/default/objects/conference360__Hotel_Room__c/fields/conference360__Roommate_Attendee__c.field-meta.xml
<CustomField>
    <fullName>conference360__Roommate_Attendee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>If the guest is staying with an additional person and that person is an Attendee, relate them here.</description>
    <inlineHelpText>If the guest is staying with an additional person and that person is an Attendee, relate them here.</inlineHelpText>
    <label>Roommate (Attendee)</label>
    <referenceTo>conference360__Attendee__c</referenceTo>
    <relationshipLabel>Hotel Bookings (Roommate)</relationshipLabel>
    <relationshipName>Hotel_Bookings1</relationshipName>
    <type>Lookup</type>
</CustomField>