unpackaged/main/default/objects/conference360__Hotel_Room__c/fields/conference360__Roommate_Contact__c.field-meta.xml
<CustomField>
    <fullName>conference360__Roommate_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>If the guest is staying with an additional person and that person is a Contact, relate them here. If you set the Attendee lookup and that Attendee has a related Contact, this lookup will get auto-set.</description>
    <inlineHelpText>If the guest is staying with an additional person and that person is a Contact, relate them here. If you set the Attendee lookup and that Attendee has a related Contact, this lookup will get auto-set.</inlineHelpText>
    <label>Roommate (Contact)</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Hotel Bookings (Roommate (Contact))</relationshipLabel>
    <relationshipName>Hotel_Bookings1</relationshipName>
    <type>Lookup</type>
</CustomField>